# chatterbox

./: README.md  example_tts.py  multilingual_app.py  pyproject.toml
src/chatterbox/: __init__.py  mtl_tts.py
src/chatterbox/models/t3/: t3.py
src/chatterbox/models/t3/modules/: t3_config.py
src/chatterbox/models/tokenizers/: tokenizer.py
